--- a/index.html
+++ b/index.html
@@ -27,28 +27,24 @@
             <div class="category-list">
                 <div class="cat-item">
                 <h3>Cat 1</h3>
+                <img src="images/menu-burger.jpg" alt="">
                 <p>SHOES FOR MEN</p>
                 </div>
                 <div class="cat-item">
-                <h3>Cat 2</h3>
-                <p>SHOES FOR WOMEN</p>
+                <h3>Cat 1</h3>
+                <img src="images/menu-burger.jpg" alt="">
+                <p>SHOES FOR MEN</p>
+                </div><div class="cat-item">
+                <h3>Cat 1</h3>
+                <img src="images/menu-burger.jpg" alt="">
+                <p>SHOES FOR MEN</p>
                 </div>
-                <div class="cat-item">
-                <h3>Cat 3</h3>
-                <p>SHOES FOR CHILDREN</p>
-                </div>
-                <div class="cat-item">
-                <h3>Cat 4</h3>
-                <p>SHOES FOR SPORT</p>
-                </div>
-                <div class="cat-item">
-                <h3>Cat 5</h3>
-                <p>SHOES FOR ALL</p>
-                </div>
+                
             </div>
         </div>
     </section>
-    <section id="PRODUCTS"> 
+    <section id="products"> 
+        <div class="product">
         <h2>OUR PRODUCTS</h2>
         <div class="product-list">
             <div class="pro-item">
@@ -77,6 +73,7 @@
                 <p class="price">$20</p>
             </div>
         </div>
+        </div>
     </section>
     <footer>
         <div class="footer-content">
@@ -88,6 +85,7 @@
                 <li><a href="#">CONTACT</a></li>
                 <li><a href="#">ABOUT</a></li>
             </ul>
+        </div>
     </footer>
 </body>
 </html>
